5_aws_terra_project/ec2.tf
resource "aws_instance" "ec2" {
  ami           = var.ec2-ami
  instance_type = var.ec2-instance-type

  #Specify the keypair 
  #TODO: you want to make this optional if not provided
  #Keypairs also have to be created b4 time
  key_name = var.ec2-keypair
  # VPC, subnet, az
  vpc_id                 = aws_vpc.vpc.id
  subnet_id              = aws_subnet.prv-sn1.id
  availability_zone      = var.ec2-azs[0]

  # Specify security group
  vpc_security_group_ids = [aws_security_group.webserver-sg.id]
  # s3 iam role
  iam_instance_profile = aws_iam_instance_profile.ec2-s3-access-profile.name

  # user data to copy files from s3 bucket
  user_data = <<-EOF
    #!/bin/bash 
    sudo su 
    yum update -y 
    yum install httpd -y 
    chkconfig httpd on 
    cd /var/www/html 
    aws s3 sync s3://trust-s3-website /var/www/html 
    service httpd start
  EOF
  # Depend on VPC to be created first
  #depends_on = [ aws_vpc.vpc, aws_nat_gateway.ngw1, aws_nat_gateway.ngw2, aws_internet_gateway.igw ]

  tags = {
    Name = "Trust Web Server test"
  }
}

## IAM ec2 s3 access Role
resource "aws_iam_role" "ec2-s3-iam-role" {
  name = "trust-ec2-s3-access"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_policy" "s3-access-policy" {
  name = "ec2-s3-access-policy"
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "s3:Get*",
          "s3:List*"
        ]
        Effect   = "Allow"
        Resource = "*"
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "s3-read-only" {
  policy_arn = aws_iam_policy.s3-access-policy.arn
  role       = aws_iam_role.ec2-s3-iam-role.name
}

resource "aws_iam_instance_profile" "ec2-s3-access-profile" {
  name = "ec2-s3-access-profile"
  role = aws_iam_role.ec2-s3-iam-role.name
}




# Security Groups
resource "aws_security_group" "alb-sg" {
  name        = "Trust - ALB Security Group"
  description = "Enable HTTP/HTTPS access on Port 80/443"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "HTTP Access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS Access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ALB Security Group"
  }
}

resource "aws_security_group" "webserver-sg" {
  name        = "Trust - Web Server SG"
  description = "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "HTTP Access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups  = [aws_security_group.alb-sg.id]
  }

  ingress {
    description = "HTTPS Access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups  = [aws_security_group.alb-sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Web Server Security Group"
  }
}
